# alex-1883-prism

./: .env.example  .gitignore  .plan  README.md  package.json
backend/: Cargo.toml
backend/migrations/: 20260719020000_baseline.sql  20260719030000_create_users.sql  20260719070000_create_clients.sql  20260719100000_create_time_blocks.sql
backend/src/: auth.rs  config.rs  db.rs  http.rs  main.rs
backend/src/accounts/: mod.rs
backend/src/clients/: mod.rs
backend/src/time_blocks/: mod.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  clients.ts  system.ts  timeBlocks.ts  types.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/planner/: ClientManager.tsx  DayTimeline.tsx  PlannerShell.tsx
frontend/tests/e2e/: core-flow.spec.ts
